src/test/ui/macros/macro-attribute.stderr
error: unexpected token: `$`
  --> $DIR/macro-attribute.rs:1:7
   |
LL | #[doc = $not_there] //~ ERROR unexpected token: `$`
   |       ^

error: aborting due to previous error

